--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>User Information Form</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>User Info Form</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <h2>User Information Form</h2>
+    <h1>User Info Form</h1>
     <form id="userForm">
-      <label>Name:</label><input type="text" id="name" required>
-      <label>Age:</label><input type="number" id="age" required>
-      <label>Mobile:</label><input type="tel" id="mobile" required>
-      <label>State:</label><input type="text" id="state" required>
-      <label>Country:</label><input type="text" id="country" required>
-      <label>Marital Status:</label>
-      <select id="marital" required>
-        <option value="">Select</option>
-        <option value="Single">Single</option>
-        <option value="Married">Married</option>
-      </select>
+      <label>First Name:</label>
+      <input type="text" id="firstName" required />
+
+      <label>Last Name:</label>
+      <input type="text" id="lastName" required />
+
+      <label>Mobile Number:</label>
+      <input type="text" id="mobile" required />
+
       <button type="submit">Submit</button>
     </form>
     <p id="status"></p>
   </div>
-  <script src="app.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
